Fix issue where search-state is not aligned properly when chosen-scopes scrolls

--- a/sass/chosen.scss
+++ b/sass/chosen.scss
@@ -36,6 +36,17 @@ $chosen-sprite-retina: image-url('chosen-sprite@2x.png');
   .is-scope:after {
     content: " › ";
   }
+  .search-state {
+    @include background($chosen-sprite no-repeat 100% -20px, linear-gradient(#eee 1%, #fff 15%));
+    background-color: white;
+    position: absolute;
+    right: 5px;
+    top: 4px;
+    bottom: 4px;
+    width: 20px;
+    padding: 0;
+    margin: 0;
+  }
   .chosen-scopes {
     position: relative;
     overflow: hidden;
@@ -44,16 +55,6 @@ $chosen-sprite-retina: image-url('chosen-sprite@2x.png');
     border: 1px solid #aaa;
     @include background(linear-gradient(#eee 1%, #fff 15%));
     cursor: text;
-    .search-state {
-      @include background($chosen-sprite no-repeat 100% -20px);
-      position: absolute;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      width: 20px;
-      padding: 0;
-      margin: 0;
-    }
   }
   .chosen-scopes {
     & li {
